--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -31,6 +31,12 @@
       height: 18px;
       width: 18px;
    }
+
+   &.dark {
+      .table-btn {
+         background-color: $c-jaguar
+      }
+   }
 }
 
 // Table Component
